--- a/package.json
+++ b/package.json
@@ -5,24 +5,31 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint 'src/**/*.{js,ts}' --fix",
+    "preview": "vite preview",
+    "format": "prettier --write 'src/**/*.{js,ts,json,md}'"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "eslint": "^9.11.1",
+    "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
 }
